# ContentForge

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  config.yaml.example
config/prompts/: content_writer.md  final_polisher.md  quality_reviewer.md  strategy_planner.md  trend_interpreter.md
docs/superpowers/plans/: 2026-05-03-content-forge.md
docs/superpowers/specs/: 2026-05-03-content-forge-design.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AgentPanel.jsx  PipelineVisualizer.jsx  PlatformTabs.jsx  ScoreBar.jsx  Sidebar.jsx
frontend/src/context/: GenerateContext.jsx
frontend/src/pages/: Dashboard.jsx  Generate.jsx  History.jsx  Models.jsx
src/agents/: content_writer.py  final_polisher.py  quality_reviewer.py  strategy_planner.py  trend_interpreter.py
src/cli/: main.py
src/model/: provider.py
src/orchestrator/: base.py  langgraph_impl.py
src/storage/: database.py  models.py
src/web/: app.py
tests/: test_agents.py  test_integration.py  test_models.py  test_orchestrator.py  test_provider.py  test_storage.py
