[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-forge"
version = "0.1.0"
description = "Multi-agent content generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "rich>=13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
